--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Mexant</title>
+ <title>Learsi</title>
  <link rel="stylesheet" href="/style.css">
  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" /> -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer"
@@ -149,7 +149,7 @@
     <li><i class="fa-solid fa-home"></i> 5 Ajegunle, Irapada street, Ibadan, Oyo State.</li>
   </ul> -->
  <div class="contact-form">
-   <form action="" id="form" method="get" onsubmit="validateForm">
+   <form action="" id="form" method="get" onsubmit="return validateForm()">
     <label for="">Name<span style="color:#e80000 ;">*</span></label>
 <div class="input-flex">
       <input required placeholder="First name" type="text"> 
