--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
  <title>Learsi</title>
  <link rel="stylesheet" href="/style.css">
  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" /> -->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer"
- />
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"  />
  <script src="/main.js"></script>
 </head>
 <body>
@@ -29,7 +28,7 @@
     <li><a class="hideonmobile fixed" href="/index.html">HOME</a></li>
     <li><a class="hideonmobile" href="#about">ABOUT</a></li>
     <li><a class="hideonmobile" href="#service">SERVICES</a></li>
-    <li><a class="hideonmobile" href="#">PAGES</a></li>
+    <li><a class="hideonmobile" href="#page">PAGES</a></li>
     <li class="menu-btn" onclick="showSidebar()"><a style="color:black;" href="#"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
 
 </ul>
@@ -62,7 +61,7 @@
   </div>
  </div>
 
-  <div class="container-3">
+  <div id="page" class="container-3">
   <h1>Business <span class="txt-green">Solutions</span> <br>  &  <span class="txt-orange">Crypto</span> Investments</h1>
   <div class="buttons">
     <a href="#" class="btn bg-green">Discover More</a>
