--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 <body>
  <div id="top" class="container-1">
   <nav class="nav-bar">
-   <h1>Learsi</h1>
-
+<img src="/Image/isolated-monochrome-white.svg" alt="">
    <ul id="" class="sidebar nav-list">
   <li  onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
     
     <li><a href="/index.html" class="fixed">HOME</a></li>
     <li><a href="#about">ABOUT</a></li>
     <li><a href="#service">SERVICES</a></li>
-    <li><a href="#">PAGES</a></li>
+    <li><a href="#page">PAGES</a></li>
 </ul>
 
    <ul id="" class="nav-list">
@@ -171,18 +170,18 @@
  </div>
  </div>
   <div class="pre-foot">
-<a href="#" class="dis-2"> <img src="/Image/client-01.png" alt=""></a>
-<a href="#" class="dis-2"> <img src="/Image/client-01.png" alt=""></a>
-<a href="#" class="dis-1"> <img src="/Image/client-01.png" alt=""></a>
-<a href="#" class="dis"> <img src="/Image/client-01.png" alt=""></a>
-<a href="#" class="dis"> <img src="/Image/client-01.png" alt=""></a>
+<a href="#" class="dis-2"> <img src="/Image/default-monochrome-white.svg" alt=""></a>
+<a href="#" class="dis-2"> <img src="/Image/default-monochrome-white.svg" alt=""></a>
+<a href="#" class="dis-1"> <img src="/Image/default-monochrome-white.svg" alt=""></a>
+<a href="#" class="dis"> <img src="/Image/default-monochrome-white.svg" alt=""></a>
+<a href="#" class="dis"> <img src="/Image/default-monochrome-white.svg" alt=""></a>
 <!-- <a href="#" class="dis"> <img src="/Image/client-01.png" alt=""></a> -->
  </div>
 
   <a href="#top" class="to-top"><i class="fa-solid fa-arrow-up"></i></a>
  <footer>
   <small>Copyright © 2022 Mexant Co., Ltd. All Rights Reserved.</small><br>
-<small>Designed by <a href="#" class="txt-orange">TemplateMo</a> Distributed By <a href="#" class="txt-orange">ThemeWagon</a></small>
+<small>Designed by <a href="#" class="txt-orange">Israel</a><br> Distributed By <a href="#" class="txt-orange">Learsi-Media</a></small>
  </footer>
 
 </body>
