--- a/index.html
+++ b/index.html
@@ -38,30 +38,49 @@
    </nav>
    <div class="header">
     <div class="header-text">
-       <h1 >Get <span class="txt-green">ready</span> for your business <br> & upgrade <span class="txt-orange">all aspects.</span></h1>
+       <h1> Get a creative <br> <span class="txt-green">website</span> & upgrade  <span class="txt-orange">your business.</span></h1>
   <div class="text-line"></div>
-  <p>Learsi HTML5 Template is provided for free of charge. This layout is based on Boostrap 5 CSS framework. Anyone can download and edit for any professional website. <br> Thank you for visiting TemplateMo website.</p>
-<div class="buttons">
+  <p>Take your business to the next level with a professional online presence. Discover the benefits of upgrading to premium solutions, expert support, and advanced features designed to help you expand your market.</p>
+  <!-- <p>"Hi, I'm Israel, a passionate Web Developer with a knack for creating stunning and functional designs. Explore my work, learn about my skills, and get in touch to collaborate on exciting projects!</p> -->
+  <div class="buttons">
     <a href="#" class="btn bg-green">Discover More</a>
-  <a href="#" class="btn bg-orange">Contact Us</a>
+    <a href="#" class="btn bg-orange">Contact Us</a>
+    <i class="f-dots fa-solid fa-ellipsis"></i>
+    <i class="f-dots-2 fa-solid fa-ellipsis"></i>
+    <i class="f-circle fa-solid fa-circle"></i>
+    <i class="br-1 fa-solid fa-braille"></i>
+    <i class="br-2 fa-solid fa-braille"></i>
+    <i class="f-round fa-regular fa-circle"></i>
+    <i class="fa-solid fa-play"></i>
 </div>
     </div>
-<img src="/Image/5124556-removebg-preview.png" alt="">
+    <div class="header-img">
+<img src="/Image/Growing-bro.png" alt="">
+<!-- <img class="ran-icons fa-braille" src="/Image/braille-solid.svg" alt=""> -->
+    </div>
    </div>
  </div>
 
  <!-- Section 2 -->
  <div class="container-2" id="about">
-  <h1>WANT TO KNOW MORE ABOUT US?</h1> <br>
-  <h3 class="txt-orange">HERE WE GO</h3>
+  <h1>ABOUT US</h1> <br>
+  <h3 class="txt-orange">Your trusted partner in website design and business growth</h3>
   <div class="about-seg">
-     <img src="/Image/calculator-image.png" alt="">
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi molestiae incidunt error odit cumque neque facilis sequi laudantium id consectetur. Quasi accusantium sapiente praesentium, incidunt corrupti adipisci vitae eveniet fugit!</p>
+
+     <p>"At <strong>Learsi-Media</strong>, we believe that every business deserves a professional online presence. Our team of experts is dedicated to helping small businesses like yours succeed in the digital landscape. With years of experience in website design, development, and marketing, we have the skills and expertise to take your business to the next level. Our mission is to provide high-quality, affordable websites that help our clients grow their customer base, increase sales, and establish a strong online reputation"</p>
+    <div class="ceo">
+       <img src="/Image/sq-israel.png" alt="">
+       
+       <h4>Adebukola Israel</h4>
+       <small>CEO of Learsi-Media</small>
+
+    </div>
+
   </div>
  </div>
 
   <div id="page" class="container-3">
-  <h1>Business <span class="txt-green">Solutions</span> <br>  &  <span class="txt-orange">Crypto</span> Investments</h1>
+  <h1>Unlock the <span class="txt-green">full potential</span> <br>  of <span class="txt-orange">your business.</span> </h1>
   <div class="buttons">
     <a href="#" class="btn bg-green">Discover More</a>
     <a href="#" class="btn bg-orange">Contact Us</a>
@@ -74,21 +93,11 @@
     <div class="box">
       <!-- <span class="material-symbols-outlined">inventory_2</span> -->
       <div class="box-icon">
-       <i class="fa-solid fa-cloud"></i>
+       <i class="fa-solid fa-edit"></i>
       </div>
 <div class="box-text">
-  <h3>CSS Templates</h3>
-  <p>TemplateMo website is the best for you to explore and download free website templates</p>
-</div>
-    </div>
-    <div class="box">
-      <!-- <span class="material-symbols-outlined">inventory_2</span> -->
-      <div class="box-icon">
-       <i class="fa-solid fa-bolt"></i>
-      </div>
-<div class="box-text">
-  <h3>HTML5 Web Pages</h3>
-  <p>Templates are based on Bootstrap 5 CSS framework. You can easily adapt or modify based on your needs.</p>
+  <h3>Custom design and branding</h3>
+  <p>Learsi website is the best for you to get and order for the business website of your own taste</p>
 </div>
     </div>
     <div class="box">
@@ -97,38 +106,49 @@
        <i class="fa-solid fa-thumbs-up"></i>
       </div>
 <div class="box-text">
-  <h3>Responsive Designs</h3>
-  <p>All of our CSS templates are 100% free to use for commercial or business websites.</p>
+  <h3>Easy-to-use content management system</h3>
+  <p>Effortlessly update your website with the latest news, products, and services.</p>
 </div>
     </div>
     <div class="box">
       <!-- <span class="material-symbols-outlined">inventory_2</span> -->
       <div class="box-icon">
-       <i class="fa-solid fa-tablet"></i>
+              <i class="fa-solid fa-tablet"></i>
+
       </div>
 <div class="box-text">
-  <h3>Mobile and Tablet ready!</h3>
-  <p>Our HTML CSS templates are well-tested on mobile, tablet, and desktop compatibility.</p>
+  <h3>Mobile-friendly and responsive design</h3>
+  <p>Ensure a seamless user experience across desktop, tablet, and mobile devices.</p>
 </div>
     </div>
     <div class="box">
       <!-- <span class="material-symbols-outlined">inventory_2</span> -->
       <div class="box-icon">
-       <i class="fa-solid fa-phone"></i>
+        <i class="fa-solid fa-handshake-simple"></i>
       </div>
 <div class="box-text">
-  <h3>Fast Customer Support</h3>
-  <p>Do not be hesitated to contact us if you have any question or concern about our templates.</p>
+  <h3>Ongoing support and maintenance</h3>
+  <p>Continuous monitoring and improvement to keep your website running smoothly.</p>
 </div>
     </div>
     <div class="box">
       <!-- <span class="material-symbols-outlined">inventory_2</span> -->
       <div class="box-icon">
-       <i class="fa-solid fa-edit"></i>
+<i class="fa-solid fa-shield"></i>
+  </div>
+<div class="box-text">
+  <h3>Secure and reliable hosting</h3>
+  <p>Enjoy fast loading speeds and reliable uptime</p>
+</div>
+    </div>
+    <div class="box">
+      <!-- <span class="material-symbols-outlined">inventory_2</span> -->
+      <div class="box-icon">
+       <i class="fa-solid fa-search"></i>
       </div>
 <div class="box-text">
-  <h3>Fully Customizable</h3>
-  <p>If you have any idea or suggestion about new templates, feel free to let us know.</p>
+  <h3>Search engine optimization (SEO)</h3>
+  <p>Ensuring the accesibility and visibility of your website</p>
 </div>
     </div>
   </div>
