--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <h3 class="txt-orange">Your trusted partner in website design and business growth</h3>
   <div class="about-seg">
 
-     <p>"At <strong>Learsi-Media</strong>, we believe that every business deserves a professional online presence. <span class="text-dis"> Our team of experts is dedicated to helping businesses like yours succeed in the digital landscape. With years of experience in website design, development, and marketing, we have the skills and expertise to take your business to the next level.</span> Our mission is to provide high-quality, affordable websites that help our clients grow their customer base, increase sales, and establish a strong online reputation"</p>
+     <p>"At <strong>Learsi-Media</strong>, we believe that every business deserves a professional online presence. <span class="text-dis"> Our team of experts is dedicated to helping businesses like yours succeed in the digital landscape. With years of experience in website design, development, and marketing, we have the skills and expertise to take your business to the next level.</span> Our mission is to provide high-quality, affordable websites that help our clients grow their customer base, increase sales, and establish a strong online reputation."</p>
     <div class="ceo">
        <img src="/Image/sq-israel.png" alt="">
        
