--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <div id="page" class="container-3">
   <h1>Unlock the <span class="txt-green">full potential</span> <br>  of <span class="txt-orange">your business.</span> </h1>
-  <div class="buttons">
+  <div class="unlock-buttons">
     <a href="#" class="btn bg-green">Discover More</a>
     <a href="#" class="btn bg-orange">Contact Us</a>
 
