--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
        <img src="/Image/sq-israel.png" alt="">
        
        <h4>Adebukola Israel</h4>
-       <small>CEO of Learsi-Media</small>
+       <small>CEO of Learsi Media</small>
 
     </div>
 
